--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                 <br>
                 <em>arXiv 2023</em>,
                 <br>
-                <a href="">[PDF]</a>
+                <a href="https://arxiv.org/abs/2311.18729">[PDF]</a>
                 <a href="https://yudeng.github.io/Portrait4D/">[Project]</a>
+		<a href="https://github.com/YuDeng/Portrait-4D">[Code]</a>
                 <br>
                 <p>We propose a one-shot 4D head synthesis approach for high-fidelity 4D head avatar reconstruction while trained on large-scale synthetic data.</p>
             </td>
@@ -88,6 +89,7 @@
                 <br>
                 <a href="https://arxiv.org/abs/2303.09036">[PDF]</a>
                 <a href="https://seanchenxy.github.io/Mimic3DWeb/">[Project]</a>
+		<a href="https://github.com/SeanChenxy/Mimic3D">[Code]</a>
                 <br>
                 <p>We propose a novel approach that enables a 3D-aware GAN to generate images with both state-of-the-art photorealism and strict 3D consistency.</p>
             </td>
