--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <br>
                 <strong>Yu Deng</strong>, Duomin Wang, Xiaohang Ren, Xingyu Chen, Baoyuan Wang
                 <br>
-                <em>arXiv 2023</em>,
+                <em>2024 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2024,
                 <br>
                 <a href="https://arxiv.org/abs/2311.18729">[PDF]</a>
                 <a href="https://yudeng.github.io/Portrait4D/">[Project]</a>
