--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
             <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
                 <div class="one">
 		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/portrait4d-v2.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
+                <papertitle>Portrait4D-v2: Pseudo Multi-View Data Creates Better 4D Head Synthesizer</papertitle>
+                <br>
+                <strong>Yu Deng</strong>, Duomin Wang, Baoyuan Wang
+                <br>
+                <em>arXiv</em>,
+                <br>
+                <a href="https://arxiv.org/abs/2403.13570">[PDF]</a>
+                <a href="https://yudeng.github.io/Portrait4D-v2/">[Project]</a>
+		<a href="https://github.com/YuDeng/Portrait-4D">[Code]</a>
+                <br>
+                <p>We learn a lifelike 4D head synthesizer by creating pseudo multi-view videos from monocular ones as supervision.</p>
+            </td>
+        </tr>	
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
                 <source src='images/portrait4d.mp4'>
 		</video>
                 </div>
