--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
               <p style="text-align:center">
                 Email: dengyu[at]xiaobing.ai &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
-              <p>I am currently a researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.ai</a>. My research interests include 3D reconstruction&generation, 3D representation learning, and neural rendering. 
+              <p>I am currently a senior researcher at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia (MSRA)</a>. 
+		      My research interests include 3D reconstruction&generation, neural rendering, and Embodied AI. 
               </p>
               <p>
-                Before joining Xiaobing, I received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
-                worked closely with <a href="http://jlyang.org/">Jiaolong Yang</a> and <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a> as a research intern at <a href="https://www.microsoft.com/en-us/research/group/visual-computing/">MSRA</a> from 2017 to 2022.  
-	      Before that, I received my B.S. from Department of Physics in Tsinghua University in 2017.
+                Prior to that, I was a researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.AI</a> working on realistic virtual avatar generation. Before joining Xiaobing, I had received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
+                worked closely with <a href="http://jlyang.org/">Jiaolong Yang</a> and <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a> as a research intern at MSRA from 2017 to 2022.  
+	      Before that, I had received my B.S. from Department of Physics in Tsinghua University in 2017.
               </p>
 <!--               <p>
                 <strong>
