--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 Email: dengyu[at]xiaobing.ai &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
               <p>I am currently a senior researcher at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia (MSRA)</a>. 
-		      My research interests include 3D reconstruction&generation, neural rendering, and Embodied AI. 
+		      My research interests include 3D generation, neural rendering, and Embodied AI. 
               </p>
               <p>
                 Prior to that, I was a researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.AI</a> working on realistic virtual avatar generation. Before joining Xiaobing, I had received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
