--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Yu Deng (邓誉)</name>
               </p>
               <p style="text-align:center">
-                Email: dengyu[at]xiaobing.ai &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
+                Email: dengyu[at]microsoft.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
               <p>I am currently a senior researcher at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia (MSRA)</a>. 
 		      My research interests include 3D generation, neural rendering, and Embodied AI. 
