--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <meta name="author" content="Yu Deng">
   <meta name="description" content="Yu Deng's Homepage">
-  <meta name="keywords" content="Yu Deng,邓誉,homepage,主页,PhD,computer vision,MSRA,Tsinghua,3D face,3D reconstruction,image generation,implicit field">
+  <meta name="keywords" content="Yu Deng,邓誉,homepage,主页,PhD,computer vision,MSRA,Tsinghua,3D generation,neural rendering, Embodied AI">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Yu Deng (邓誉)'s Homepage</title>
   
@@ -39,7 +39,7 @@
 		    
             </td>
             <td style="padding:15% 7% 7% 7%;width:40%;max-width:40%">
-              <a href="images/yu.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/yu.jpg" class="hoverZoomLink"></a>
+              <a href="images/2.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/2.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
