--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <br>
                 <strong>Yu Deng</strong>, Duomin Wang, Baoyuan Wang
                 <br>
-                <em>arXiv</em>,
+                <em>2024 European Conference on Computer Vision</em>, ECCV 2024,
                 <br>
                 <a href="https://arxiv.org/abs/2403.13570">[PDF]</a>
                 <a href="https://yudeng.github.io/Portrait4D-v2/">[Project]</a>
