add moge; compress videos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 Email: dengyu[at]microsoft.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
               <p>I am currently a senior researcher at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia (MSRA)</a>. 
-		      My research interests include 3D generation, neural rendering, and Embodied AI. 
+		      My research interests include 3D vision&generation, neural rendering, and Embodied AI. 
               </p>
               <p>
                 Prior to that, I was a researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.AI</a> working on realistic virtual avatar generation. Before joining Xiaobing, I had received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
@@ -51,6 +51,29 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/moge.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>MoGe: Unlocking Accurate Monocular Geometry Estimation for Open-Domain Images with Optimal Training Supervision</papertitle>
+                <br>
+                Ruicheng Wang, Sicheng Xu, Cassie Dai, Jianfeng Xiang, <strong>Yu Deng</strong>, Xin Tong, Jiaolong Yang
+                <br>
+                <em>arXiv 2024</em>,
+                <br>
+                <a href="https://arxiv.org/abs/2410.19115">[PDF]</a>
+                <a href="https://wangrc.site/MoGePage/">[Project]</a>
+		<a href="https://github.com/microsoft/moge">[Code]</a>
+                <br>
+                <p>We present MoGe, a powerful model for recovering 3D geometry from monocular open-domain images.</p>
+            </td>
+        </tr>	
 
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
