--- a/index.html
+++ b/index.html
@@ -61,6 +61,29 @@
                 </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>CogACT: A Foundational Vision-Language-Action Model for Synergizing Cognition and Action in Robotic Manipulation</papertitle>
+                <br>
+                Qixiu Li, Yaobo Liang, Zeyu Wang, Lin Luo, Xi Chen, Mozheng Liao, Fangyun Wei, <strong>Yu Deng</strong>, Sicheng Xu, Yizhong Zhang, Xiaofan Wang, Bei Liu, Jianlong Fu, Jianmin Bao, Dong Chen, Yuanchun Shi, Jiaolong Yang, Baining Guo
+                <br>
+                <em>arXiv 2024</em>,
+                <br>
+                <a href="https://arxiv.org/abs/2411.19650">[PDF]</a>
+                <a href="https://cogact.github.io/">[Project]</a>
+		<a href="https://github.com/microsoft/CogACT">[Code]</a>
+                <br>
+                <p>We propose a new advanced VLA architecture for robot manipulation, which leverages cognitive information extracted by powerful VLMs to guide action prediction of a specialized action module.</p>
+            </td>
+        </tr>	
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/moge.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
                 <papertitle>MoGe: Unlocking Accurate Monocular Geometry Estimation for Open-Domain Images with Optimal Training Supervision</papertitle>
                 <br>
                 Ruicheng Wang, Sicheng Xu, Cassie Dai, Jianfeng Xiang, <strong>Yu Deng</strong>, Xin Tong, Jiaolong Yang
