--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
 		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
-                <source src='images/moge.mp4'>
+                <source src='images/cogact.mp4'>
 		</video>
                 </div>
             </td>
