--- a/index.html
+++ b/index.html
@@ -56,6 +56,29 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
 		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/trellis.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>Structured 3D Latents for Scalable and Versatile 3D Generation</papertitle>
+                <br>
+                Jianfeng Xiang, Zelong Lv, Sicheng Xu, <strong>Yu Deng</strong>, Ruicheng Wang, Bowen Zhang, Dong Chen, Xin Tong, Jiaolong Yang
+                <br>
+                <em>arXiv 2024</em>,
+                <br>
+                <a href="https://arxiv.org/abs/2412.01506">[PDF]</a>
+                <a href="https://trellis3d.github.io/">[Project]</a>
+		<a href="https://github.com/Microsoft/TRELLIS">[Code]</a>
+                <br>
+                <p>We propose a native 3D generative model built on a unified Structured Latent representation and Rectified Flow Transformers, enabling versatile and high-quality 3D asset creation.</p>
+            </td>
+        </tr>	
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
                 <source src='images/cogact.mp4'>
 		</video>
                 </div>
