--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <br>
                 Jianfeng Xiang, Zelong Lv, Sicheng Xu, <strong>Yu Deng</strong>, Ruicheng Wang, Bowen Zhang, Dong Chen, Xin Tong, Jiaolong Yang
                 <br>
-                <em>arXiv 2024</em>,
+                <em>2025 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2025,
                 <br>
                 <a href="https://arxiv.org/abs/2412.01506">[PDF]</a>
                 <a href="https://trellis3d.github.io/">[Project]</a>
@@ -111,7 +111,7 @@
                 <br>
                 Ruicheng Wang, Sicheng Xu, Cassie Dai, Jianfeng Xiang, <strong>Yu Deng</strong>, Xin Tong, Jiaolong Yang
                 <br>
-                <em>arXiv 2024</em>,
+                <em>2025 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2025,
                 <br>
                 <a href="https://arxiv.org/abs/2410.19115">[PDF]</a>
                 <a href="https://wangrc.site/MoGePage/">[Project]</a>
