--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 Jianfeng Xiang, Zelong Lv, Sicheng Xu, <strong>Yu Deng</strong>, Ruicheng Wang, Bowen Zhang, Dong Chen, Xin Tong, Jiaolong Yang
                 <br>
                 <em>2025 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2025,
+		    <strong><font color="#FF8080">Spotlight</font></strong>
                 <br>
                 <a href="https://arxiv.org/abs/2412.01506">[PDF]</a>
                 <a href="https://trellis3d.github.io/">[Project]</a>
@@ -112,6 +113,7 @@
                 Ruicheng Wang, Sicheng Xu, Cassie Dai, Jianfeng Xiang, <strong>Yu Deng</strong>, Xin Tong, Jiaolong Yang
                 <br>
                 <em>2025 IEEE Conference on Computer Vision and Pattern Recognition</em>, CVPR 2025,
+		    <strong><font color="#FF0000">Oral Presentation</font></strong>
                 <br>
                 <a href="https://arxiv.org/abs/2410.19115">[PDF]</a>
                 <a href="https://wangrc.site/MoGePage/">[Project]</a>
