--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</video>
                 </div>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
                 <papertitle>Structured 3D Latents for Scalable and Versatile 3D Generation</papertitle>
                 <br>
                 Jianfeng Xiang, Zelong Lv, Sicheng Xu, <strong>Yu Deng</strong>, Ruicheng Wang, Bowen Zhang, Dong Chen, Xin Tong, Jiaolong Yang
