--- a/index.html
+++ b/index.html
@@ -24,18 +24,13 @@
                 Email: dengyu[at]microsoft.com &nbsp; &nbsp;&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=N3F3H0sAAAAJ&hl=en">Google Scholar</a> &nbsp; &nbsp;&nbsp;&nbsp;<a href="https://github.com/YuDeng">Github</a>
               </p>
               <p>I am currently a senior researcher at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia (MSRA)</a>. 
-		      My research interests include 3D vision&generation, neural rendering, and Embodied AI. 
+		      My research interests include 3D vision&generation, spatial understanding, and Embodied AI. 
               </p>
               <p>
                 Prior to that, I was a researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.AI</a> working on realistic virtual avatar generation. Before joining Xiaobing, I had received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
-                worked closely with <a href="http://jlyang.org/">Jiaolong Yang</a> and <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a> as a research intern at MSRA from 2017 to 2022.  
+                worked closely with Dr. <a href="http://jlyang.org/">Jiaolong Yang</a> and <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a> as a research intern at MSRA from 2017 to 2022.  
 	      Before that, I had received my B.S. from Department of Physics in Tsinghua University in 2017.
               </p>
-<!--               <p>
-                <strong>
-                I'm seeking research interns on 3D-aware GAN and NeRF-based neural rendering. Feel free to send me an email if you are interested.
-                </strong>
-              </p> -->
 		    
             </td>
             <td style="padding:15% 7% 7% 7%;width:40%;max-width:40%">
@@ -52,6 +47,30 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/vitra.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
+                <papertitle>Scalable Vision-Language-Action Model Pretraining for Robotic Manipulation with Real-Life Human Activity Videos</papertitle>
+                <br>
+                Qixiu Li*, <strong>Yu Deng*</strong>, Yaobo Liang, Lin Luo, Lei Zhou, Chengtang Yao, Lingqi Zeng, Zhiyuan Feng, Huizhi Liang, Sicheng Xu, Yizhong Zhang, Xi Chen, Hao Chen, Lily Sun, Dong Chen, Jiaolong Yang, Baining Guo
+                <br>
+                <em>arXiv 2025</em>,
+		    <strong><font color="#FF8080">Spotlight</font></strong>
+                <br>
+                <a href="https://arxiv.org/abs/2510.21571">[PDF]</a>
+                <a href="https://microsoft.github.io/VITRA/">[Project]</a>
+		<a href="https://github.com/microsoft/VITRA/">[Code]</a>
+                <br>
+                <p>We propose VITRA, a novel approach for pretraining Vision-Language-Action (VLA) models for robotic manipulation using large-scale, unscripted, real-world videos of human hand activities.</p>
+            </td>
+        </tr>	
+			
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
                 <div class="one">
