--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
             <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
                 <papertitle>Scalable Vision-Language-Action Model Pretraining for Robotic Manipulation with Real-Life Human Activity Videos</papertitle>
                 <br>
-                Qixiu Li*, <strong>Yu Deng*</strong>, Yaobo Liang, Lin Luo, Lei Zhou, Chengtang Yao, Lingqi Zeng, Zhiyuan Feng, Huizhi Liang, Sicheng Xu, Yizhong Zhang, Xi Chen, Hao Chen, Lily Sun, Dong Chen, Jiaolong Yang, Baining Guo
+                Qixiu Li*, <strong>Yu Deng*</strong>, Yaobo Liang, Lin Luo, Lei Zhou, Chengtang Yao, Lingqi Zeng, Zhiyuan Feng, Huizhi Liang, Sicheng Xu, Yizhong Zhang, Xi Chen, Hao Chen, Lily Sun, Dong Chen, Jiaolong Yang, Baining Guo (* for equal contribution)
                 <br>
                 <em>arXiv 2025</em>,
-		    <strong><font color="#FF8080">Spotlight</font></strong>
                 <br>
                 <a href="https://arxiv.org/abs/2510.21571">[PDF]</a>
                 <a href="https://microsoft.github.io/VITRA/">[Project]</a>
