--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		      My research interests include 3D vision&generation, spatial understanding, and Embodied AI. 
               </p>
               <p>
-                Prior to that, I was a researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.AI</a> working on realistic virtual avatar generation. Before joining Xiaobing, I had received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of <a href="https://www.microsoft.com/en-us/research/people/hshum/">Prof. Harry Shum</a> in 2022, and  
+                Prior to that, I was a researcher at <a href="https://www.linkedin.com/company/xiaobing-ai">Xiaobing.AI</a> working on realistic virtual avatar generation. Before joining Xiaobing, I had received my Ph.D. degree from <a href="https://www.ias.tsinghua.edu.cn/en/">Tsinghua University</a> under the supervision of Prof. <a href="https://www.microsoft.com/en-us/research/people/hshum/">Harry Shum</a> in 2022, and  
                 worked closely with Dr. <a href="http://jlyang.org/">Jiaolong Yang</a> and <a href="https://www.microsoft.com/en-us/research/people/xtong/">Xin Tong</a> as a research intern at MSRA from 2017 to 2022.  
 	      Before that, I had received my B.S. from Department of Physics in Tsinghua University in 2017.
               </p>
@@ -58,7 +58,7 @@
             <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
                 <papertitle>Scalable Vision-Language-Action Model Pretraining for Robotic Manipulation with Real-Life Human Activity Videos</papertitle>
                 <br>
-                Qixiu Li*, <strong>Yu Deng*</strong>, Yaobo Liang, Lin Luo, Lei Zhou, Chengtang Yao, Lingqi Zeng, Zhiyuan Feng, Huizhi Liang, Sicheng Xu, Yizhong Zhang, Xi Chen, Hao Chen, Lily Sun, Dong Chen, Jiaolong Yang, Baining Guo (* for equal contribution)
+                Qixiu Li*, <strong>Yu Deng*</strong>, Yaobo Liang*, Lin Luo*, Lei Zhou, Chengtang Yao, Lingqi Zeng, Zhiyuan Feng, Huizhi Liang, Sicheng Xu, Yizhong Zhang, Xi Chen, Hao Chen, Lily Sun, Dong Chen, Jiaolong Yang, Baining Guo (* for equal contribution)
                 <br>
                 <em>arXiv 2025</em>,
                 <br>
@@ -67,6 +67,29 @@
 		<a href="https://github.com/microsoft/VITRA/">[Code]</a>
                 <br>
                 <p>We propose VITRA, a novel approach for pretraining Vision-Language-Action (VLA) models for robotic manipulation using large-scale, unscripted, real-world videos of human hand activities.</p>
+            </td>
+        </tr>	
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/moge-2.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>MoGe-2: Accurate Monocular Geometry with Metric Scale and Sharp Details</papertitle>
+                <br>
+                Ruicheng Wang, Sicheng Xu, Yue Dong, <strong>Yu Deng*</strong>, Jianfeng Xiang, Zelong Lv, Guangzhong Sun, Xin Tong, Jiaolong Yang
+                <br>
+                <em>2022 Conference on Neural Information Processing Systems</em>, NeurIPS 2025,
+                <br>
+                <a href="https://arxiv.org/abs/2507.02546">[PDF]</a>
+                <a href="https://wangrc.site/MoGe2Page/">[Project]</a>
+		<a href="https://github.com/microsoft/moge">[Code]</a>
+                <br>
+                <p>We propose MoGe-2, a monocular geometry estimation method with accurate metric-scale prediction and sharp details.</p>
             </td>
         </tr>	
 			
