--- a/index.html
+++ b/index.html
@@ -60,13 +60,36 @@
                 <br>
                 Qixiu Li*, <strong>Yu Deng*</strong>, Yaobo Liang*, Lin Luo*, Lei Zhou, Chengtang Yao, Lingqi Zeng, Zhiyuan Feng, Huizhi Liang, Sicheng Xu, Yizhong Zhang, Xi Chen, Hao Chen, Lily Sun, Dong Chen, Jiaolong Yang, Baining Guo (* for equal contribution)
                 <br>
-                <em>arXiv 2025</em>,
+                <em>arXiv 2025</em>
                 <br>
                 <a href="https://arxiv.org/abs/2510.21571">[PDF]</a>
                 <a href="https://microsoft.github.io/VITRA/">[Project]</a>
 		<a href="https://github.com/microsoft/VITRA/">[Code]</a>
                 <br>
                 <p>We propose VITRA, a novel approach for pretraining Vision-Language-Action (VLA) models for robotic manipulation using large-scale, unscripted, real-world videos of human hand activities.</p>
+            </td>
+        </tr>	
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/see.jpg'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>Seeing Across Views: Benchmarking Spatial Reasoning of Vision-Language Models in Robotic Scenes</papertitle>
+                <br>
+                Zhiyuan Feng*, Zhaolu Kang*, Qijie Wang*, Zhiying Du*, Jiongrui Yan, Shubin Shi, Chengbo Yuan, Huizhi Liang, <strong>Yu Deng<strong>, Qixiu Li, Rushuai Yang, Arctanx An, Leqi Zheng, Weijie Wang, Shawn Chen, Sicheng Xu, Yaobo Liang, Jiaolong Yang, Baining Guo
+                <br>
+                <em>arXiv 2025</em>
+                <br>
+                <a href="https://arxiv.org/abs/2510.19400">[PDF]</a>
+                <a href="https://github.com/microsoft/MV-RoboBench">[Project]</a>
+		<a href="https://github.com/microsoft/MV-RoboBench">[Code]</a>
+                <br>
+                <p>We propose MV-RoboBench, a benchmark for evaluating the multi-view spatial reasoning capabilities of VLMs in robotic manipulation.</p>
             </td>
         </tr>	
 
@@ -81,15 +104,37 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
                 <papertitle>MoGe-2: Accurate Monocular Geometry with Metric Scale and Sharp Details</papertitle>
                 <br>
-                Ruicheng Wang, Sicheng Xu, Yue Dong, <strong>Yu Deng*</strong>, Jianfeng Xiang, Zelong Lv, Guangzhong Sun, Xin Tong, Jiaolong Yang
+                Ruicheng Wang, Sicheng Xu, Yue Dong, <strong>Yu Deng</strong>, Jianfeng Xiang, Zelong Lv, Guangzhong Sun, Xin Tong, Jiaolong Yang
                 <br>
-                <em>2022 Conference on Neural Information Processing Systems</em>, NeurIPS 2025,
+                <em>2025 Conference on Neural Information Processing Systems</em>, NeurIPS 2025
                 <br>
                 <a href="https://arxiv.org/abs/2507.02546">[PDF]</a>
                 <a href="https://wangrc.site/MoGe2Page/">[Project]</a>
 		<a href="https://github.com/microsoft/moge">[Code]</a>
                 <br>
                 <p>We propose MoGe-2, a monocular geometry estimation method with accurate metric-scale prediction and sharp details.</p>
+            </td>
+        </tr>	
+
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/vasa3d.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>VASA-3D: Lifelike Audio-Driven Gaussian Head Avatars from a Single Image</papertitle>
+                <br>
+                Sicheng Xu*, Guojun Chen*, Jiaolong Yang, Yizhong Zhang, <strong>Yu Deng</strong>, Steve Lin, Baining Guo
+                <br>
+                <em>2025 Conference on Neural Information Processing Systems</em>, NeurIPS 2025
+                <br>
+                <a href="https://www.microsoft.com/en-us/research/project/vasa-3d/">[PDF]</a>
+                <a href="https://www.microsoft.com/en-us/research/project/vasa-3d/">[Project]</a>
+                <br>
+                <p>We propose VASA-3D, a novel method for creating real-time life-like 3D talking head avatars from a single image.</p>
             </td>
         </tr>	
 			
