--- a/index.html
+++ b/index.html
@@ -72,10 +72,8 @@
 
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one">
-		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
-                <source src='images/see.jpg'>
-		</video>
+                <div class="one" >
+			<a href="images/see.jpg"><img style="width:100%;max-width:100%; position: absolute;top: -5%" alt="MV-RoboBench" src="images/see.jpg" class="hoverZoomLink"></a>
                 </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
