Fix HTML tag for strong emphasis on author's name

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
                 <papertitle>Seeing Across Views: Benchmarking Spatial Reasoning of Vision-Language Models in Robotic Scenes</papertitle>
                 <br>
-                Zhiyuan Feng*, Zhaolu Kang*, Qijie Wang*, Zhiying Du*, Jiongrui Yan, Shubin Shi, Chengbo Yuan, Huizhi Liang, <strong>Yu Deng<strong>, Qixiu Li, Rushuai Yang, Arctanx An, Leqi Zheng, Weijie Wang, Shawn Chen, Sicheng Xu, Yaobo Liang, Jiaolong Yang, Baining Guo
+                Zhiyuan Feng*, Zhaolu Kang*, Qijie Wang*, Zhiying Du*, Jiongrui Yan, Shubin Shi, Chengbo Yuan, Huizhi Liang, <strong>Yu Deng</strong>, Qixiu Li, Rushuai Yang, Arctanx An, Leqi Zheng, Weijie Wang, Shawn Chen, Sicheng Xu, Yaobo Liang, Jiaolong Yang, Baining Guo
                 <br>
                 <em>arXiv 2025</em>
                 <br>
