--- a/index.html
+++ b/index.html
@@ -254,12 +254,12 @@
         </tr>	
 		
         <tr></tr>
-            <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
 		<a href="images/mimic3d.png"><img style="width:100%;max-width:100%; position: absolute;top: -5%" alt="Mimic3D" src="images/mimic3d.png" class="hoverZoomLink"></a>
                 </div>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle" bgcolor="#ffffd0">
+            <td style="padding:20px;width:75%;vertical-align:middle">
                 <papertitle>Mimic3D: Thriving 3D-Aware GANs via 3D-to-2D Imitation</papertitle>
                 <br>
                 Xingyu Chen*, <strong>Yu Deng*</strong>, Baoyuan Wang (* for equal contribution)
