--- a/index.html
+++ b/index.html
@@ -46,7 +46,30 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
+			
+        <tr></tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+		<video playsinline autoplay loop preload muted style="width:100%;max-width:100%; position: absolute;top: -5%">
+                <source src='images/trellis2.mp4'>
+		</video>
+                </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <papertitle>Native and Compact Structured Latents for 3D Generation</papertitle>
+                <br>
+                Jianfeng Xiang, Xiaoxue Chen, Sicheng Xu, Ruicheng Wang, Zelong Lv, <strong>Yu Deng</strong>, Hongyuan Zhu, Yue Dong, Hao Zhao, Nicholas Jing Yuan, Jiaolong Yang
+                <br>
+                <em>arXiv 2025</em>
+                <br>
+                <a href="https://arxiv.org/abs/2512.14692">[PDF]</a>
+                <a href="https://microsoft.github.io/TRELLIS.2/">[Project]</a>
+				<a href="https://github.com/microsoft/TRELLIS.2">[Code]</a>
+                <br>
+                <p>We propose TRELLIS.2, an image-to-3D generation method built on native and compact structured latents derived from a novel O-voxel 3D representation, designed to encode both precise geometry and complex appearance simultaneously.</p>
+            </td>
+        </tr>	
+			
         <tr></tr>
             <td style="padding:20px;width:25%;vertical-align:middle" bgcolor="#ffffd0">
                 <div class="one">
