--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 <a href="https://microsoft.github.io/TRELLIS.2/">[Project]</a>
 				<a href="https://github.com/microsoft/TRELLIS.2">[Code]</a>
                 <br>
-                <p>We propose TRELLIS.2, an image-to-3D generation method built on native and compact structured latents derived from a novel O-voxel 3D representation, designed to 
-				encode both precise geometry and appearance simultaneously for generating arbitary 3D assets with complex topologies and full PBR materials.</p>
+                <p>We propose TRELLIS.2, an image-to-3D generation method built on native and compact structured latents derived from a novel O-voxel 3D representation, designed for generating arbitary 3D assets with complex topologies and full PBR materials.</p>
             </td>
         </tr>	
 			
